--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "gflags"]
 	path = gflags
 	url = git@github.com:gflags/gflags.git
+[submodule "googletest"]
+	path = googletest
+	url = git@github.com:google/googletest.git
