--- a/src/nn/CMakeLists.txt
+++ b/src/nn/CMakeLists.txt
@@ -9,3 +9,7 @@ add_test(fixed_depth_hpyp_test fixed_depth_hpyp_test)
 add_executable(uniform_test uniform_test.cpp)
 target_link_libraries(uniform_test gtest gtest_main ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 add_test(uniform_test uniform_test)
+
+add_executable(node_test node_test.cpp)
+target_link_libraries(node_test gtest gtest_main ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+add_test(node_test node_test)
