--- a/src/nn/CMakeLists.txt
+++ b/src/nn/CMakeLists.txt
@@ -17,3 +17,15 @@ add_test(node_test node_test)
 add_executable(mutable_symbol_table_test mutable_symtab_test.cpp)
 target_link_libraries(mutable_symbol_table_test gtest gtest_main ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 add_test(mutable_symbol_table_test mutable_symbol_table_test)
+
+add_executable(adapted_seq_model_test adapted_seq_model_test.cpp)
+target_link_libraries(adapted_seq_model_test gtest gtest_main ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+add_test(adapted_seq_model_test adapted_seq_model_test)
+
+#add_executable(hidden_sequence_memoizer_test hidden_sequence_memoizer_test.cpp)
+#target_link_libraries(hidden_sequence_memoizer_test gtest gtest_main ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+#add_test(hidden_sequence_memoizer_test hidden_sequence_memoizer_test)
+
+#add_executable(segmental_sequence_memoizer_test segmental_sequence_memoizer_test.cpp)
+#target_link_libraries(segmental_sequence_memoizer_test gtest gtest_main ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+#add_test(segmental_sequence_memoizer_test segmental_sequence_memoizer_test)
